# latent-introspection-code

./: .gitignore  LICENSE  README.md  helpers.py  main.py  pyproject.toml
misc/: adhoc_baseline_questions.py
prompts/complete_logit_lens_prompts/: _order.json  echo_info-introspect_fmt-yes-no.json  echo_info-lorem-ipsum_fmt-yes-no.json  echo_info-none_fmt-yes-no.json  echo_info-poetic_fmt-yes-no.json  finetune_info-introspect_fmt-yes-no.json  finetune_info-lorem-ipsum_fmt-yes-no.json  finetune_info-none_fmt-yes-no.json  finetune_info-poetic_fmt-yes-no.json  inject-inaccurate_info-introspect_fmt-yes-no.json  inject-inaccurate_info-lorem-ipsum_fmt-yes-no.json  inject-inaccurate_info-none_fmt-yes-no.json  inject-inaccurate_info-poetic_fmt-yes-no.json  inject_info-introspect_fmt-yes-no.json  inject_info-lorem-ipsum_fmt-yes-no.json  inject_info-none_fmt-yes-no.json  inject_info-poetic_fmt-yes-no.json  salient_info-introspect_fmt-yes-no.json  salient_info-lorem-ipsum_fmt-yes-no.json  salient_info-none_fmt-yes-no.json  salient_info-poetic_fmt-yes-no.json
prompts/concept_confusion_matrix_prompts/: _order.json  echo_info-introspect_shuf_00.json  echo_info-introspect_shuf_01.json  echo_info-introspect_shuf_02.json  echo_info-introspect_shuf_03.json  echo_info-introspect_shuf_04.json  echo_info-lorem-ipsum_shuf_00.json  echo_info-lorem-ipsum_shuf_01.json  echo_info-lorem-ipsum_shuf_02.json  echo_info-lorem-ipsum_shuf_03.json  echo_info-lorem-ipsum_shuf_04.json  echo_info-none_shuf_00.json  echo_info-none_shuf_01.json  echo_info-none_shuf_02.json  echo_info-none_shuf_03.json  (+86 more)
(+1413 files in other folders)
